Project

General

Profile

Actions

Fix #47983

closed

mds: use proper gather for inode commit ops

Added by Erqi Chen over 3 years ago. Updated over 3 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
-
Target version:
% Done:

0%

Source:
Community (dev)
Tags:
Backport:
octopus,nautilus
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Improvement for CInode::_commit_ops.

MDS journal handles inodes concurrently by CInode::_commit_ops, fin is C_Gather, so no need to create new C_OnFinisher in gather.

And fin can be Context rather than MDSContext to avoid unnecessary MDS lock.

Actions #1

Updated by Patrick Donnelly over 3 years ago

  • Status changed from New to Fix Under Review
  • Assignee set to Erqi Chen
  • Target version set to v16.0.0
  • Source set to Community (dev)
  • Backport set to octopus,nautilus
Actions #2

Updated by Erqi Chen over 3 years ago

New idea to optimize by pr #37828 optimize batch backtrace store,old pr #37778 is closed and this issue also can be close.

#37828 is small optimization, no issue related.

Actions #3

Updated by Erqi Chen over 3 years ago

Erqi Chen wrote:

New idea to optimize by pr 37828 optimize batch backtrace store,old pr 37778 is closed and this issue also can be close.

37828 is small optimization, no issue related.

Actions #4

Updated by Patrick Donnelly over 3 years ago

  • Status changed from Fix Under Review to Closed
Actions

Also available in: Atom PDF