mds: use proper gather for inode commit ops

MDS journal handles inodes concurrently by CInode::_commit_ops,
fin is C_Gather, so no need to create new C_OnFinisher in gather,
and not use MDSContext fin to avoid unnecessary MDS lock.

Fixes: https://tracker.ceph.com/issues/47983
Signed-off-by: Erqi Chen <chenerqi@gmail.com>